# cicd-test-lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: lib.cpp  lib.hpp
tests/: tests.cpp
